fix bugs on firefox

--- a/src/scss/components/_layout.scss
+++ b/src/scss/components/_layout.scss
@@ -8,7 +8,6 @@
 
   &.is-open {
     margin-left: 0;
-    transition: margin 0.2s;
   }
 }
 
